Add scroll animations across all pages with fade-in, slide, and scale effects

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,6 +31,7 @@
   <link rel="stylesheet" href="{{ 'reset.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'animations.css' | asset_url }}">
+  <link rel="stylesheet" href="{{ 'scroll-animations.css' | asset_url }}">
 </head>
 <body class="template-{{ template.name | handle }}">
 
@@ -41,6 +42,7 @@
   <!-- JavaScript Files -->
   <script src="{{ 'utils.js' | asset_url }}" defer></script>
   <script src="{{ 'animations.js' | asset_url }}" defer></script>
+  <script src="{{ 'scroll-animations.js' | asset_url }}" defer></script>
   <script src="{{ 'main.js' | asset_url }}" defer></script>
 
 </body>
