--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -21,7 +21,7 @@
       </div>
 
       <div class="product-pricing">
-        <div class="pricing-option animate-on-scroll fade-in-up featured">
+        <div class="pricing-option featured">
           <span class="popular-tag">Most Popular</span>
           <div class="price-header">
             <h4>Monthly</h4>
@@ -41,7 +41,7 @@
           <a href="/products/bot-suite-monthly" class="btn btn-primary">Get Started</a>
         </div>
 
-        <div class="pricing-option animate-on-scroll fade-in-up">
+        <div class="pricing-option">
           <div class="price-header">
             <h4>Annual</h4>
             <div class="price">
@@ -61,7 +61,7 @@
           <a href="/products/bot-suite-annual" class="btn btn-primary">Get Started</a>
         </div>
 
-        <div class="pricing-option animate-on-scroll fade-in-up addon">
+        <div class="pricing-option addon">
           <span class="popular-tag">Optional<br>Add-on</span>
           <div class="price-header">
             <h4>Setup</h4>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="product-pricing">
-        <div class="pricing-option animate-on-scroll fade-in-up featured">
+        <div class="pricing-option featured">
           <span class="popular-tag">Most Popular</span>
           <div class="price-header">
             <h4>Monthly</h4>
@@ -115,7 +115,7 @@
           <button class="btn btn-disabled" disabled>Coming Soon</button>
         </div>
 
-        <div class="pricing-option animate-on-scroll fade-in-up">
+        <div class="pricing-option">
           <div class="price-header">
             <h4>Annual</h4>
             <div class="price">
