--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -6,7 +6,7 @@
     </div>
     <div class="faq-list">
       {% for block in section.blocks %}
-        <div class="faq-item animate-on-scroll fade-in-up">
+        <div class="faq-item">
           <button class="faq-question">
             <span>{{ block.settings.question }}</span>
             <span class="faq-icon">+</span>
